# NyxPico

./: CMakeLists.txt  README.md  load_uf.sh
trustzone/: CMakeLists.txt  trustzone_pt.json  trustzone_pt.uf2
trustzone/hello_trustzone/: CMakeLists.txt  nonsecure.c  secure.c  secure_call_user_callbacks.h
trustzone/wifi_tls_verify/: CMakeLists.txt  nonsecure.c  secure.c
two_worlds/: CMakeLists.txt  secure_call_user_callbacks.h
